--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.3",
     "modesl": "^1.2.1",
+    "net": "^1.0.2",
     "nodemailer": "^7.0.12",
     "uuid": "^13.0.0",
     "validator": "^13.15.26"
@@ -25,7 +26,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.31",
     "@types/nodemailer": "^7.0.4",
     "@types/validator": "^13.15.10",
     "tsx": "^4.21.0",
